Added select currency component

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   pointer-events: none;
 }
 
+.span-currency {
+    text-align: right;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
